k8s/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: wannabuythis
  labels:
    app: wannabuythis
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wannabuythis
  labels:
    app: wannabuythis
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/desunovu/wannabuythis-backend:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "750m"
              memory: "1Gi"
---
