k8s/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: wannabuythis
  labels:
    app: wannabuythis
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: wannabuythis
  labels:
    app: wannabuythis
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/desunovu/wannabuythis-frontend:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
